--- a/04-prj-routing/components/events/events-search.module.css
+++ b/04-prj-routing/components/events/events-search.module.css
@@ -33,7 +33,7 @@
 
 .control select {
   font: inherit;
-  background-color: white;
+  background-color: #74dacc;
   border-radius: 6px;
   width: 70%;
   padding: 0.25rem;
