--- a/04-prj-routing/components/layout/main-header.module.css
+++ b/04-prj-routing/components/layout/main-header.module.css
@@ -8,9 +8,8 @@
   background-color: #202020;
 }
 
-.logo {
+.logo, .navigation {
   font-size: 1.5rem;
-  color: white;
   font-family: 'Fira', sans-serif;
   height: 100%;
   display: flex;
